--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "classnames": "^2.2.6"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.8",
+    "@types/classnames": "^2.2.11",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.0.16",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^26.6.3",
     "react-scripts": "^4.0.3",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
